[FWA-854] Fixed! Hide contact tab from contractors [FWA-863] Fixed! Remove toggles to require invoice in supplier view [FWA-785] Fixed! When adding a member, the email field is too narrow

--- a/modules/core/AutoForm/AutoForm.less
+++ b/modules/core/AutoForm/AutoForm.less
@@ -10,3 +10,7 @@
         padding: 0;
     }
 }
+
+.inline-form-control {
+	width: 100%;
+}
